[gd_scene load_steps=13 format=3 uid="uid://b625j38ldufmr"]

[ext_resource type="Script" path="res://levels/shots_mission.gd" id="1_s7t36"]
[ext_resource type="Texture2D" uid="uid://b1ma0snmmpyi1" path="res://art/backdrop3.png" id="2_jr8q7"]
[ext_resource type="Texture2D" uid="uid://b5q3ju3fvvkjh" path="res://art/head.png" id="2_vyrus"]
[ext_resource type="PackedScene" uid="uid://bkpivysxlc0dn" path="res://char_files/trees.tscn" id="3_enlkh"]
[ext_resource type="PackedScene" uid="uid://0ge0355cdx55" path="res://char_files/cia.tscn" id="3_o66kv"]
[ext_resource type="PackedScene" uid="uid://cl6mgux20a7xj" path="res://char_files/beer.tscn" id="4_g4vi1"]
[ext_resource type="PackedScene" uid="uid://dbgmj1b2oipyq" path="res://char_files/level_text.tscn" id="5_62plf"]
[ext_resource type="PackedScene" uid="uid://c38ysxegh7gfe" path="res://char_files/poison.tscn" id="5_txsal"]
[ext_resource type="PackedScene" uid="uid://cwn0od8c4ie8j" path="res://char_files/score_board.tscn" id="6_csav2"]
[ext_resource type="AudioStream" uid="uid://b8qb5nowerux1" path="res://sounds/spill.wav" id="6_fehl8"]
[ext_resource type="PackedScene" uid="uid://f7lcieg80ccc" path="res://levels/lose_label.tscn" id="7_dqv13"]
[ext_resource type="Texture2D" uid="uid://ds111j78mjxj7" path="res://art/beer.png" id="9_302cf"]

[node name="shots_mission" type="Node2D"]
script = ExtResource("1_s7t36")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="sky" type="Sprite2D" parent="."]
modulate = Color(0.541176, 0.831373, 0.839216, 1)
position = Vector2(274, -598)
texture = ExtResource("2_jr8q7")

[node name="trees" parent="." instance=ExtResource("3_enlkh")]
position = Vector2(-522, -115)
rotation = -0.282743
scale = Vector2(0.5, 0.5)

[node name="trees2" parent="." instance=ExtResource("3_enlkh")]
position = Vector2(-437, -118)
rotation = 0.18675
scale = Vector2(0.4, 0.4)

[node name="sand" type="Sprite2D" parent="."]
modulate = Color(0.901961, 0.815686, 0.576471, 1)
position = Vector2(324, 609.5)
scale = Vector2(1, 0.378333)
texture = ExtResource("2_jr8q7")

[node name="Head" type="Sprite2D" parent="."]
position = Vector2(-170, -145)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_vyrus")

[node name="cia" parent="." instance=ExtResource("3_o66kv")]
position = Vector2(165, -142)
scale = Vector2(1.5, 1.5)

[node name="leg2" type="Sprite2D" parent="."]
modulate = Color(0.521569, 0.368627, 0.258824, 1)
position = Vector2(350, 459)
scale = Vector2(0.01325, 0.0889166)
texture = ExtResource("2_jr8q7")

[node name="leg" type="Sprite2D" parent="."]
modulate = Color(0.521569, 0.368627, 0.258824, 1)
position = Vector2(-350, 459)
scale = Vector2(0.01325, 0.0889166)
texture = ExtResource("2_jr8q7")

[node name="table2" type="Sprite2D" parent="."]
modulate = Color(0.423529, 0.294118, 0.2, 1)
position = Vector2(0, 281)
scale = Vector2(0.285833, 0.0889166)
texture = ExtResource("2_jr8q7")

[node name="table" type="Sprite2D" parent="."]
modulate = Color(0.521569, 0.368627, 0.258824, 1)
position = Vector2(3.8147e-06, 261)
scale = Vector2(0.285833, 0.0889166)
texture = ExtResource("2_jr8q7")

[node name="time_rect" type="ColorRect" parent="."]
offset_left = -299.0
offset_top = -461.0
offset_right = 301.0
offset_bottom = -421.0
color = Color(0.643137, 0.176471, 0.215686, 1)

[node name="beer" parent="." instance=ExtResource("4_g4vi1")]
position = Vector2(-177, 83)

[node name="poison55" parent="beer" instance=ExtResource("5_txsal")]
position = Vector2(-50, -89)

[node name="poison" parent="beer/poison55" instance=ExtResource("5_txsal")]
position = Vector2(10, 3)

[node name="poison2" parent="beer/poison55/poison" instance=ExtResource("5_txsal")]
position = Vector2(9, 0)

[node name="poison4" parent="beer/poison55/poison/poison2" instance=ExtResource("5_txsal")]
position = Vector2(23, -1)

[node name="poison5" parent="beer/poison55/poison/poison2/poison4" instance=ExtResource("5_txsal")]
position = Vector2(11, 0)

[node name="poison6" parent="beer/poison55/poison/poison2/poison4/poison5" instance=ExtResource("5_txsal")]
position = Vector2(10, 0)

[node name="poison7" parent="beer/poison55/poison/poison2/poison4/poison5/poison6" instance=ExtResource("5_txsal")]
position = Vector2(10, -1)

[node name="poison8" parent="beer/poison55/poison/poison2/poison4/poison5/poison6/poison7" instance=ExtResource("5_txsal")]
position = Vector2(11, 0)

[node name="poison3" parent="beer/poison55/poison/poison2/poison4/poison5/poison6/poison7/poison8" instance=ExtResource("5_txsal")]
position = Vector2(-54, 1)

[node name="poison9" parent="beer/poison55/poison/poison2/poison4/poison5/poison6/poison7/poison8" instance=ExtResource("5_txsal")]
position = Vector2(10, -1)

[node name="poison10" parent="beer/poison55/poison/poison2/poison4/poison5/poison6/poison7/poison8/poison9" instance=ExtResource("5_txsal")]
position = Vector2(10, 0)

[node name="beer2" parent="." instance=ExtResource("4_g4vi1")]
position = Vector2(175, 82)

[node name="spill_sound" type="AudioStreamPlayer2D" parent="beer2"]
position = Vector2(-175, -82)
stream = ExtResource("6_fehl8")

[node name="winTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="lvTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="bartime" type="Timer" parent="."]
wait_time = 0.041
autostart = true

[node name="level_text" parent="." node_paths=PackedStringArray("level") instance=ExtResource("5_62plf")]
position = Vector2(4, 311)
tx = 3
level = NodePath("..")

[node name="score_board" parent="." instance=ExtResource("6_csav2")]
position = Vector2(0, -400)

[node name="Beerim" type="Sprite2D" parent="."]
position = Vector2(-177, 82)
texture = ExtResource("9_302cf")

[node name="lose label" parent="." instance=ExtResource("7_dqv13")]
position = Vector2(0, 820)

[connection signal="timeout" from="winTimer" to="." method="_on_win_timer_timeout"]
[connection signal="timeout" from="lvTimer" to="." method="_on_lv_timer_timeout"]
[connection signal="timeout" from="bartime" to="." method="_on_bartime_timeout"]
